[package]
name = "CompilerSigner"
version = "4.0.0"
edition = "2024"
authors = ["daemon.devin"]
description = "Code signing utility with PKCS12 and Microsoft SignTool integration"
license = "MIT"

[dependencies]
rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.21"
pkcs8 = "0.10"
x509-cert = { version = "0.2.5", features = ["builder"], default-features = false }
der = "0.7"
spki = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
const-oid = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0"
which = "6.0"
anyhow = "1.0"

[build-dependencies]
winresource = "0.1"
